# idwx

./: .gitignore  README.md  pyproject.toml
configs/: idaho.yml  stations.yml
docs/: 01_REPO_ARCHITECTURE.md  02_DATA_CONTRACT.md  03_TARGETS.md  04_FEATURES.md  05_MODELS.md  06_EVALUATION.md  07_CLI_SPEC.md  08_CONFIG_SPEC.md  10_RAILS_GUI_PLAN.md  11_SECURITY.md
docs/CODEX/: 01_CODEX_BOOTSTRAP.md
idwx/: __init__.py  __main__.py  clean.py  cli.py  config.py  daily.py  datasets.py  eval.py  features.py  io.py  registry.py  targets.py
idwx/models/: __init__.py  base.py  climatology.py  conformal.py  rf.py  trend.py
scripts/: smoke_ingest.py
